--- a/controleur_db/nginx.conf
+++ b/controleur_db/nginx.conf
@@ -2,7 +2,7 @@ error_log /var/log/nginx/error.log notice;
 
 server {
     listen 80;
-    server_name hessla_api;
+    server_name isla_controller_db;
 
     location /api {
         proxy_pass http://localhost:8080;
