--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,13 +23,24 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Install dependencies
+    - name: Choix - Install dependencies
       run: |
         cd ./choix
         python -m pip install --upgrade pip
         pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
+    - name: Choix - Test with pytest
       run: |
         cd ./choix
         pytest ./app.py
+    - name: Aiguilleur - Install dependencies
+      run: |
+        cd ./aiguilleur
+        python -m pip install --upgrade pip
+        pip install pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Aiguilleur - Test with pytest
+      run: |
+        cd ./aiguilleur
+        pytest ./app.py
+        
