--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,8 +36,8 @@ jobs:
     - name: Choix - Build the Docker image
       run:  |
         cd ./choix
-        docker build . --file Dockerfile --tag ethokia/isla-choix:$(date +%s)
-        docker push ethokia/isla-choix:$(date +%s)
+        docker build . --file Dockerfile --tag ethokia/isla-choix:$(date +'%d%m%y')
+        docker push ethokia/isla-choix:$(date +'%d%m%y')
     - name: Aiguilleur - Install dependencies
       run: |
         cd ./aiguilleur
@@ -51,5 +51,5 @@ jobs:
     - name: Aiguilleur - Build the Docker image
       run:  |
         cd ./aiguilleur
-        docker build . --file Dockerfile --tag ethokia/isla-aiguilleur:$(date +%s)
-        docker push ethokia/isla-aiguilleur:$(date +%s)
+        docker build . --file Dockerfile --tag ethokia/isla-aiguilleur:$(date +'%d%m%y')
+        docker push ethokia/isla-aiguilleur:$(date +'%d%m%y')
