--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,6 +37,7 @@ jobs:
       run:  |
         cd ./choix
         docker build . --file Dockerfile --tag ethokia/isla-choix:$(date +'%d%m%y')
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         docker push ethokia/isla-choix:$(date +'%d%m%y')
     - name: Aiguilleur - Install dependencies
       run: |
@@ -52,4 +53,5 @@ jobs:
       run:  |
         cd ./aiguilleur
         docker build . --file Dockerfile --tag ethokia/isla-aiguilleur:$(date +'%d%m%y')
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         docker push ethokia/isla-aiguilleur:$(date +'%d%m%y')
