--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,8 +37,8 @@ jobs:
       run:  |
         cd ./choix
         echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
-        docker build . --file Dockerfile --tag ethokia/isla-choix:$(date +'%d%m%y')
-        docker push ethokia/isla-choix:$(date +'%d%m%y')
+        echo "$DOCKER_PASSWORD" | docker build . --file Dockerfile --tag ethokia/isla-choix:$(date +'%d%m%y') --username "$DOCKER_USERNAME" --password-stdin
+        echo "$DOCKER_PASSWORD" | docker push ethokia/isla-choix:$(date +'%d%m%y') --username "$DOCKER_USERNAME" --password-stdin
     - name: Aiguilleur - Install dependencies
       run: |
         cd ./aiguilleur
@@ -53,5 +53,5 @@ jobs:
       run:  |
         cd ./aiguilleur
         echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
-        docker build . --file Dockerfile --tag ethokia/isla-aiguilleur:$(date +'%d%m%y')
-        docker push ethokia/isla-aiguilleur:$(date +'%d%m%y')
+        echo "$DOCKER_PASSWORD" | docker build . --file Dockerfile --tag ethokia/isla-aiguilleur:$(date +'%d%m%y') --username "$DOCKER_USERNAME" --password-stdin
+        echo "$DOCKER_PASSWORD" | docker push ethokia/isla-aiguilleur:$(date +'%d%m%y') --username "$DOCKER_USERNAME" --password-stdin
