--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -49,9 +49,9 @@ jobs:
       run: |
         cd ./aiguilleur
         pytest ./app.py
-    - name: Aiguilleur - Build the Docker image
+    - name: Choix - Build the Docker image
       run:  |
-        cd ./aiguilleur
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        docker build . --file Dockerfile --tag ethokia/isla-aiguilleur:$(date +'%d%m%y')
-        docker push ethokia/isla-aiguilleur:$(date +'%d%m%y')
+        cd ./choix
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username "${{ secrets.DOCKER_USERNAME }}" --password "${{ secrets.DOCKER_PASSWORD }}"
+        docker build . --file Dockerfile --tag ethokia/isla-choix:$(date +'%d%m%y')
+        docker push ethokia/isla-choix:$(date +'%d%m%y')
