--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,7 +38,7 @@ jobs:
         cd ./choix
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username "${{ secrets.DOCKER_USERNAME }}" --password "${{ secrets.DOCKER_PASSWORD }}"
         docker build . --file Dockerfile --tag gregorie/isla-choix:$(date +'%d%m%y')
-        docker push gregorie/isla-choix:$(date +'%d%m%y')
+        docker push gregorie/isla-choix:$(date +'%d%m%y') --auth "${{ secrets.DOCKER_USERNAME }}":"${{ secrets.DOCKER_PASSWORD }}"
     - name: Aiguilleur - Install dependencies
       run: |
         cd ./aiguilleur
@@ -54,4 +54,4 @@ jobs:
         cd ./aiguilleur
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password "${{ secrets.DOCKER_PASSWORD }}"
         docker build . --file Dockerfile --tag gregorie/isla-aiguilleur:$(date +'%d%m%y')
-        docker push gregorie/isla-aiguilleur:$(date +'%d%m%y')
+        docker push gregorie/isla-aiguilleur:$(date +'%d%m%y') --auth "${{ secrets.DOCKER_USERNAME }}":"${{ secrets.DOCKER_PASSWORD }}"
