--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,12 +33,16 @@ jobs:
       run: |
         cd ./choix
         pytest ./app.py
+    - name: Docker Login
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Choix - Build the Docker image
       run:  |
         cd ./choix
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username "${{ secrets.DOCKER_USERNAME }}" --password "${{ secrets.DOCKER_PASSWORD }}"
         docker build . --file Dockerfile --tag gregorie/isla-choix:$(date +'%d%m%y')
-        docker push gregorie/isla-choix:$(date +'%d%m%y') --auth "${{ secrets.DOCKER_USERNAME }}":"${{ secrets.DOCKER_PASSWORD }}"
+        docker push gregorie/isla-choix:$(date +'%d%m%y')
     - name: Aiguilleur - Install dependencies
       run: |
         cd ./aiguilleur
@@ -49,9 +53,13 @@ jobs:
       run: |
         cd ./aiguilleur
         pytest ./app.py
+    - name: Docker Login
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Aiguilleur - Build the Docker image
       run:  |
         cd ./aiguilleur
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password "${{ secrets.DOCKER_PASSWORD }}"
         docker build . --file Dockerfile --tag gregorie/isla-aiguilleur:$(date +'%d%m%y')
-        docker push gregorie/isla-aiguilleur:$(date +'%d%m%y') --auth "${{ secrets.DOCKER_USERNAME }}":"${{ secrets.DOCKER_PASSWORD }}"
+        docker push gregorie/isla-aiguilleur:$(date +'%d%m%y')
