--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -64,3 +64,19 @@ jobs:
         cd ./aiguilleur
         docker build . --file Dockerfile --tag gregorie/isla-aiguilleur:$(date +'%d%m%y')
         docker push gregorie/isla-aiguilleur:$(date +'%d%m%y')
+    - name: Controleur Utilisateur - Install dependencies
+      run: |
+        cd ./controleur_db
+        python -m pip install --upgrade pip
+        pip install pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Docker Login
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Controleur Utilisateur - Build the Docker image
+      run:  |
+        cd ./aiguilleur
+        docker build . --file Dockerfile --tag gregorie/isla-controleur_db:$(date +'%d%m%y')
+        docker push gregorie/isla-controleur_db:$(date +'%d%m%y')
