--- a/choix/requirements.txt
+++ b/choix/requirements.txt
@@ -1,9 +1,9 @@
-urllib3==1.26.7
-flask==2.2.2
-werkzeug==2.2.2
+urllib3
+flask
+werkzeug
 tensorflow
-requests==2.26.0
-protobuf==3.20.3
+requests
+protobuf
 pytest
 numpy
 pillow
