--- a/choix/Dockerfile
+++ b/choix/Dockerfile
@@ -5,9 +5,10 @@ WORKDIR /app
 COPY requirements.txt .
 COPY meteo.py .
 COPY app.py .
+COPY isla.h5 .
 
 RUN python3 -m pip install --upgrade pip
-RUN python3 -m pip install --no-cache-dir -r requirements.txt
+RUN python3 -m pip install -r requirements.txt
 
 EXPOSE 8082
 
